// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`option: isApp = true 1`] = `
Object {
  "check.all": Array [
    "backtrack lint",
  ],
  "config": Array [
    Object {
      "prettier": Object {
        "overrides": Array [
          Object {
            "excludeFiles": Array [
              "*/**",
              "*/.**",
            ],
            "files": Array [
              "*.js",
              ".*.js",
            ],
            "options": Object {
              "trailingComma": "es5",
            },
          },
          Object {
            "files": Array [
              "lib/**/*.js",
              "lib/**/.*.js",
              "app/**/*.js",
              "app/**/.*.js",
              "**/__sandbox__/**/*.js",
              "**/__sandbox__/**/.*.js",
            ],
            "options": Object {
              "trailingComma": "es5",
            },
          },
        ],
      },
    },
  ],
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".editorconfig": "<PROJECT_ROOT>/.editorconfig",
        ".eslintignore": "<PROJECT_ROOT>/.eslintignore",
        ".eslintrc.js": "<PROJECT_ROOT>/.eslintrc.js",
        ".huskyrc.js": "<PROJECT_ROOT>/.huskyrc.js",
        ".lintstagedrc.js": "<PROJECT_ROOT>/.lintstagedrc.js",
        ".prettierignore": "<PROJECT_ROOT>/.prettierignore",
        ".prettierrc.js": "<PROJECT_ROOT>/.prettierrc.js",
      },
      "allowChanges": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".huskyrc.js": false,
        ".lintstagedrc.js": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
      "files": Array [
        ".huskyrc.js",
        ".eslintignore",
        ".prettierignore",
        ".editorconfig",
        ".lintstagedrc.js",
        ".eslintrc.js",
        ".prettierrc.js",
      ],
      "ignoreUpdates": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".huskyrc.js": false,
        ".lintstagedrc.js": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
    },
    "makeDirs": Array [
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/editorconfig": "<PROJECT_ROOT>/lib/files/editorconfig",
        "lib/files/eslint.js": "<PROJECT_ROOT>/lib/files/eslint.js",
        "lib/files/ignore": "<PROJECT_ROOT>/lib/files/ignore",
        "lib/files/lint-staged.js": "<PROJECT_ROOT>/lib/files/lint-staged.js",
        "lib/files/prettier.js": "<PROJECT_ROOT>/lib/files/prettier.js",
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/husky.js",
      },
      "files": Array [
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js",
        "lib/files/ignore",
        "lib/files/ignore",
        "lib/files/editorconfig",
        "lib/files/lint-staged.js",
        "lib/files/eslint.js",
        "lib/files/prettier.js",
      ],
      "hash": Object {
        "lib/files/editorconfig": "0b9d5ddd3464226f6c635fce4d987914b5a03ffcfebb6425c7e91eb72bb0299f",
        "lib/files/eslint.js": "fdb4499d6fbf4441b57b0e540a981c0db9f58023d756278d41d79a9292a544d2",
        "lib/files/ignore": "73a2c88868e2d07e67d56a7678a7cff9b19d375996830bc055e5048a3a995c7f",
        "lib/files/lint-staged.js": "f7164bc680954569d44960627d963bfcc542cd9f7635a239b30ca077a5884abd",
        "lib/files/prettier.js": "f4a7656974038636db7c4488f4953c6c6179975b17cda28b2b1b2792766ae512",
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js": "b242a598aa796a3ac2dc5cc64b83ba86ac5260414a591bb09b5ab6b4f7c027fe",
      },
    },
  },
  "format": Array [
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --write",
  ],
  "git-pre-commit": Array [
    [Function noop],
    "lint-staged",
  ],
  "git-pre-push": Array [
    [Function noop],
    "backtrack lint",
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --check",
  ],
  "lint": Array [
    "eslint --ext .js,.jsx,.mjs,.ts,.tsx .",
  ],
  "lint.fix": Array [
    "eslint --ext .js,.jsx,.mjs,.ts,.tsx --fix .",
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --write",
  ],
}
`;

exports[`option: node = true 6+ 1`] = `
Object {
  "check.all": Array [
    "backtrack lint",
  ],
  "config": Array [
    Object {},
  ],
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".editorconfig": "<PROJECT_ROOT>/.editorconfig",
        ".eslintignore": "<PROJECT_ROOT>/.eslintignore",
        ".eslintrc.js": "<PROJECT_ROOT>/.eslintrc.js",
        ".huskyrc.js": "<PROJECT_ROOT>/.huskyrc.js",
        ".lintstagedrc.js": "<PROJECT_ROOT>/.lintstagedrc.js",
        ".prettierignore": "<PROJECT_ROOT>/.prettierignore",
        ".prettierrc.js": "<PROJECT_ROOT>/.prettierrc.js",
      },
      "allowChanges": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".huskyrc.js": false,
        ".lintstagedrc.js": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
      "files": Array [
        ".huskyrc.js",
        ".eslintignore",
        ".prettierignore",
        ".editorconfig",
        ".lintstagedrc.js",
        ".eslintrc.js",
        ".prettierrc.js",
      ],
      "ignoreUpdates": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".huskyrc.js": false,
        ".lintstagedrc.js": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
    },
    "makeDirs": Array [
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/editorconfig": "<PROJECT_ROOT>/lib/files/editorconfig",
        "lib/files/eslint-node.js": "<PROJECT_ROOT>/lib/files/eslint-node.js",
        "lib/files/ignore": "<PROJECT_ROOT>/lib/files/ignore",
        "lib/files/lint-staged.js": "<PROJECT_ROOT>/lib/files/lint-staged.js",
        "lib/files/prettier-es5.js": "<PROJECT_ROOT>/lib/files/prettier-es5.js",
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/husky.js",
      },
      "files": Array [
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js",
        "lib/files/ignore",
        "lib/files/ignore",
        "lib/files/editorconfig",
        "lib/files/lint-staged.js",
        "lib/files/eslint-node.js",
        "lib/files/prettier-es5.js",
      ],
      "hash": Object {
        "lib/files/editorconfig": "0b9d5ddd3464226f6c635fce4d987914b5a03ffcfebb6425c7e91eb72bb0299f",
        "lib/files/eslint-node.js": "00aed0fb026ab32804ce28d202a5e8ff43d5ef238ab938774c34b19fd6c1047b",
        "lib/files/ignore": "73a2c88868e2d07e67d56a7678a7cff9b19d375996830bc055e5048a3a995c7f",
        "lib/files/lint-staged.js": "f7164bc680954569d44960627d963bfcc542cd9f7635a239b30ca077a5884abd",
        "lib/files/prettier-es5.js": "1a621a9107fa9add6ac9f1e52cfc79ff9cdd982bfbe30ceba217b9d71e4e555e",
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js": "b242a598aa796a3ac2dc5cc64b83ba86ac5260414a591bb09b5ab6b4f7c027fe",
      },
    },
  },
  "format": Array [
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --write",
  ],
  "git-pre-commit": Array [
    [Function noop],
    "lint-staged",
  ],
  "git-pre-push": Array [
    [Function noop],
    "backtrack lint",
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --check",
  ],
  "lint": Array [
    "eslint --ext .js,.jsx,.mjs,.ts,.tsx .",
  ],
  "lint.fix": Array [
    "eslint --ext .js,.jsx,.mjs,.ts,.tsx --fix .",
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --write",
  ],
  "prepublishOnly": Array [
    "backtrack lint",
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --check",
  ],
}
`;

exports[`option: node = true 8+ 1`] = `
Object {
  "check.all": Array [
    "backtrack lint",
  ],
  "config": Array [
    Object {},
  ],
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".editorconfig": "<PROJECT_ROOT>/.editorconfig",
        ".eslintignore": "<PROJECT_ROOT>/.eslintignore",
        ".eslintrc.js": "<PROJECT_ROOT>/.eslintrc.js",
        ".huskyrc.js": "<PROJECT_ROOT>/.huskyrc.js",
        ".lintstagedrc.js": "<PROJECT_ROOT>/.lintstagedrc.js",
        ".prettierignore": "<PROJECT_ROOT>/.prettierignore",
        ".prettierrc.js": "<PROJECT_ROOT>/.prettierrc.js",
      },
      "allowChanges": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".huskyrc.js": false,
        ".lintstagedrc.js": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
      "files": Array [
        ".huskyrc.js",
        ".eslintignore",
        ".prettierignore",
        ".editorconfig",
        ".lintstagedrc.js",
        ".eslintrc.js",
        ".prettierrc.js",
      ],
      "ignoreUpdates": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".huskyrc.js": false,
        ".lintstagedrc.js": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
    },
    "makeDirs": Array [
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/editorconfig": "<PROJECT_ROOT>/lib/files/editorconfig",
        "lib/files/eslint-node.js": "<PROJECT_ROOT>/lib/files/eslint-node.js",
        "lib/files/ignore": "<PROJECT_ROOT>/lib/files/ignore",
        "lib/files/lint-staged.js": "<PROJECT_ROOT>/lib/files/lint-staged.js",
        "lib/files/prettier.js": "<PROJECT_ROOT>/lib/files/prettier.js",
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/husky.js",
      },
      "files": Array [
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js",
        "lib/files/ignore",
        "lib/files/ignore",
        "lib/files/editorconfig",
        "lib/files/lint-staged.js",
        "lib/files/eslint-node.js",
        "lib/files/prettier.js",
      ],
      "hash": Object {
        "lib/files/editorconfig": "0b9d5ddd3464226f6c635fce4d987914b5a03ffcfebb6425c7e91eb72bb0299f",
        "lib/files/eslint-node.js": "00aed0fb026ab32804ce28d202a5e8ff43d5ef238ab938774c34b19fd6c1047b",
        "lib/files/ignore": "73a2c88868e2d07e67d56a7678a7cff9b19d375996830bc055e5048a3a995c7f",
        "lib/files/lint-staged.js": "f7164bc680954569d44960627d963bfcc542cd9f7635a239b30ca077a5884abd",
        "lib/files/prettier.js": "f4a7656974038636db7c4488f4953c6c6179975b17cda28b2b1b2792766ae512",
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js": "b242a598aa796a3ac2dc5cc64b83ba86ac5260414a591bb09b5ab6b4f7c027fe",
      },
    },
  },
  "format": Array [
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --write",
  ],
  "git-pre-commit": Array [
    [Function noop],
    "lint-staged",
  ],
  "git-pre-push": Array [
    [Function noop],
    "backtrack lint",
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --check",
  ],
  "lint": Array [
    "eslint --ext .js,.jsx,.mjs,.ts,.tsx .",
  ],
  "lint.fix": Array [
    "eslint --ext .js,.jsx,.mjs,.ts,.tsx --fix .",
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --write",
  ],
  "prepublishOnly": Array [
    "backtrack lint",
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --check",
  ],
}
`;

exports[`preset returns expected config no options 6+ 1`] = `
Object {
  "check.all": Array [
    "backtrack lint",
  ],
  "config": Array [
    Object {
      "prettier": Object {
        "overrides": Array [
          Object {
            "excludeFiles": Array [
              "*/**",
              "*/.**",
            ],
            "files": Array [
              "*.js",
              ".*.js",
            ],
            "options": Object {
              "trailingComma": "es5",
            },
          },
          Object {
            "files": Array [
              "lib/**/*.js",
              "lib/**/.*.js",
              "app/**/*.js",
              "app/**/.*.js",
              "**/__sandbox__/**/*.js",
              "**/__sandbox__/**/.*.js",
            ],
            "options": Object {
              "trailingComma": "es5",
            },
          },
        ],
      },
    },
  ],
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".editorconfig": "<PROJECT_ROOT>/.editorconfig",
        ".eslintignore": "<PROJECT_ROOT>/.eslintignore",
        ".eslintrc.js": "<PROJECT_ROOT>/.eslintrc.js",
        ".huskyrc.js": "<PROJECT_ROOT>/.huskyrc.js",
        ".lintstagedrc.js": "<PROJECT_ROOT>/.lintstagedrc.js",
        ".prettierignore": "<PROJECT_ROOT>/.prettierignore",
        ".prettierrc.js": "<PROJECT_ROOT>/.prettierrc.js",
      },
      "allowChanges": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".huskyrc.js": false,
        ".lintstagedrc.js": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
      "files": Array [
        ".huskyrc.js",
        ".eslintignore",
        ".prettierignore",
        ".editorconfig",
        ".lintstagedrc.js",
        ".eslintrc.js",
        ".prettierrc.js",
      ],
      "ignoreUpdates": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".huskyrc.js": false,
        ".lintstagedrc.js": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
    },
    "makeDirs": Array [
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/editorconfig": "<PROJECT_ROOT>/lib/files/editorconfig",
        "lib/files/eslint.js": "<PROJECT_ROOT>/lib/files/eslint.js",
        "lib/files/ignore": "<PROJECT_ROOT>/lib/files/ignore",
        "lib/files/lint-staged.js": "<PROJECT_ROOT>/lib/files/lint-staged.js",
        "lib/files/prettier.js": "<PROJECT_ROOT>/lib/files/prettier.js",
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/husky.js",
      },
      "files": Array [
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js",
        "lib/files/ignore",
        "lib/files/ignore",
        "lib/files/editorconfig",
        "lib/files/lint-staged.js",
        "lib/files/eslint.js",
        "lib/files/prettier.js",
      ],
      "hash": Object {
        "lib/files/editorconfig": "0b9d5ddd3464226f6c635fce4d987914b5a03ffcfebb6425c7e91eb72bb0299f",
        "lib/files/eslint.js": "fdb4499d6fbf4441b57b0e540a981c0db9f58023d756278d41d79a9292a544d2",
        "lib/files/ignore": "73a2c88868e2d07e67d56a7678a7cff9b19d375996830bc055e5048a3a995c7f",
        "lib/files/lint-staged.js": "f7164bc680954569d44960627d963bfcc542cd9f7635a239b30ca077a5884abd",
        "lib/files/prettier.js": "f4a7656974038636db7c4488f4953c6c6179975b17cda28b2b1b2792766ae512",
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js": "b242a598aa796a3ac2dc5cc64b83ba86ac5260414a591bb09b5ab6b4f7c027fe",
      },
    },
  },
  "format": Array [
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --write",
  ],
  "git-pre-commit": Array [
    [Function noop],
    "lint-staged",
  ],
  "git-pre-push": Array [
    [Function noop],
    "backtrack lint",
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --check",
  ],
  "lint": Array [
    "eslint --ext .js,.jsx,.mjs,.ts,.tsx .",
  ],
  "lint.fix": Array [
    "eslint --ext .js,.jsx,.mjs,.ts,.tsx --fix .",
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --write",
  ],
  "prepublishOnly": Array [
    "backtrack lint",
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --check",
  ],
}
`;

exports[`preset returns expected config no options 8+ 1`] = `
Object {
  "check.all": Array [
    "backtrack lint",
  ],
  "config": Array [
    Object {},
  ],
  "files": Object {
    "dest": Object {
      "absolute": Object {
        ".editorconfig": "<PROJECT_ROOT>/.editorconfig",
        ".eslintignore": "<PROJECT_ROOT>/.eslintignore",
        ".eslintrc.js": "<PROJECT_ROOT>/.eslintrc.js",
        ".huskyrc.js": "<PROJECT_ROOT>/.huskyrc.js",
        ".lintstagedrc.js": "<PROJECT_ROOT>/.lintstagedrc.js",
        ".prettierignore": "<PROJECT_ROOT>/.prettierignore",
        ".prettierrc.js": "<PROJECT_ROOT>/.prettierrc.js",
      },
      "allowChanges": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".huskyrc.js": false,
        ".lintstagedrc.js": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
      "files": Array [
        ".huskyrc.js",
        ".eslintignore",
        ".prettierignore",
        ".editorconfig",
        ".lintstagedrc.js",
        ".eslintrc.js",
        ".prettierrc.js",
      ],
      "ignoreUpdates": Object {
        ".editorconfig": false,
        ".eslintignore": false,
        ".eslintrc.js": false,
        ".huskyrc.js": false,
        ".lintstagedrc.js": false,
        ".prettierignore": false,
        ".prettierrc.js": false,
      },
    },
    "makeDirs": Array [
      "dist",
      "src",
    ],
    "src": Object {
      "absolute": Object {
        "lib/files/editorconfig": "<PROJECT_ROOT>/lib/files/editorconfig",
        "lib/files/eslint.js": "<PROJECT_ROOT>/lib/files/eslint.js",
        "lib/files/ignore": "<PROJECT_ROOT>/lib/files/ignore",
        "lib/files/lint-staged.js": "<PROJECT_ROOT>/lib/files/lint-staged.js",
        "lib/files/prettier.js": "<PROJECT_ROOT>/lib/files/prettier.js",
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js": "<PROJECT_ROOT>/node_modules/@backtrack/preset-git-hooks/lib/files/husky.js",
      },
      "files": Array [
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js",
        "lib/files/ignore",
        "lib/files/ignore",
        "lib/files/editorconfig",
        "lib/files/lint-staged.js",
        "lib/files/eslint.js",
        "lib/files/prettier.js",
      ],
      "hash": Object {
        "lib/files/editorconfig": "0b9d5ddd3464226f6c635fce4d987914b5a03ffcfebb6425c7e91eb72bb0299f",
        "lib/files/eslint.js": "fdb4499d6fbf4441b57b0e540a981c0db9f58023d756278d41d79a9292a544d2",
        "lib/files/ignore": "73a2c88868e2d07e67d56a7678a7cff9b19d375996830bc055e5048a3a995c7f",
        "lib/files/lint-staged.js": "f7164bc680954569d44960627d963bfcc542cd9f7635a239b30ca077a5884abd",
        "lib/files/prettier.js": "f4a7656974038636db7c4488f4953c6c6179975b17cda28b2b1b2792766ae512",
        "node_modules/@backtrack/preset-git-hooks/lib/files/husky.js": "b242a598aa796a3ac2dc5cc64b83ba86ac5260414a591bb09b5ab6b4f7c027fe",
      },
    },
  },
  "format": Array [
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --write",
  ],
  "git-pre-commit": Array [
    [Function noop],
    "lint-staged",
  ],
  "git-pre-push": Array [
    [Function noop],
    "backtrack lint",
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --check",
  ],
  "lint": Array [
    "eslint --ext .js,.jsx,.mjs,.ts,.tsx .",
  ],
  "lint.fix": Array [
    "eslint --ext .js,.jsx,.mjs,.ts,.tsx --fix .",
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --write",
  ],
  "prepublishOnly": Array [
    "backtrack lint",
    "prettier \\"**/*.{js,mjs,jsx,ts,tsx,json,scss,less,css,md,yml,yaml}\\" --check",
  ],
}
`;
